--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,16 @@ dependencies:
   google_sign_in: ^4.1.1
   firebase_storage: ^3.1.1
   firebase_auth: ^0.15.3
+  flutter_launcher_icons: ^0.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "./images/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
